# nomad-schema-plugin-example

./: .gitignore  404.html  Dockerfile  MANIFEST.in  README.md  index.html  mkdocs.yml  nomad.yaml  pyproject.toml  requirements.txt
.github/workflows/: actions.yaml  mkdocs-deploy.yml  publish.yml
docs/: index.md
docs/explanation/: explanation.md
docs/how_to/: contribute_to_the_documentation.md  contribute_to_this_plugin.md  install_this_plugin.md  use_this_plugin.md
docs/reference/: references.md
docs/tutorial/: tutorial.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
nomadschemaexample/: schema.py
reference/: references.html
search/: search_index.json
src/nomad_ML_smiles_reader/: nomad_plugin.yaml  properties.py  reader.py  schema.py
src/nomad_analysis/: __init__.py  analysis_source.py  nomad_plugin.yaml  schema.py  utils.py
src/nomad_batteries/: nomad_plugin.yaml
tests/: __init__.py  conftest.py  test_reader.py  test_schema.py
tests/data/: original_data_NOMADschema.archive.yaml  original_data_smile_strings_48_finish.json  test.archive.yaml  testing_two_molecule_NOMAD.archive.json  testing_two_molecule_NOMAD_molecule01.archive.json  testing_two_molecule_NOMAD_molecule02.archive.json  testing_two_molecule_NOMADschema.archive.yaml  testing_two_molecules.json
tutorial/: tutorial.html
